// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypographyComponents should match a snapshot for H1 1`] = `
<h1
  className="title is-1 some-class "
  id=""
>
  Test text
</h1>
`;

exports[`TypographyComponents should match a snapshot for H2 1`] = `
<h2
  className="title is-2 some-class "
  id=""
>
  Test text
</h2>
`;

exports[`TypographyComponents should match a snapshot for H3 1`] = `
<h3
  className="title is-3 some-class "
  id=""
>
  Test text
</h3>
`;

exports[`TypographyComponents should match a snapshot for H4 1`] = `
<h4
  className="title is-4 some-class "
  id=""
>
  Test text
</h4>
`;

exports[`TypographyComponents should match a snapshot for H5 1`] = `
<h5
  className="title is-5 some-class "
  id=""
>
  Test text
</h5>
`;

exports[`TypographyComponents should match a snapshot for H6 1`] = `
<h6
  className="title is-6 some-class "
  id=""
>
  Test text
</h6>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH1 1`] = `
<h1
  className="subtitle is-1 some-class "
  id=""
>
  Test text
</h1>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH2 1`] = `
<h2
  className="subtitle is-2 some-class "
  id=""
>
  Test text
</h2>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH3 1`] = `
<h3
  className="subtitle is-3 some-class "
  id=""
>
  Test text
</h3>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH4 1`] = `
<h4
  className="subtitle is-4 some-class "
  id=""
>
  Test text
</h4>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH5 1`] = `
<h5
  className="subtitle is-5 some-class "
  id=""
>
  Test text
</h5>
`;

exports[`TypographyComponents should match a snapshot for SubTitleH6 1`] = `
<h6
  className="subtitle is-6 some-class "
  id=""
>
  Test text
</h6>
`;
